CHANGES IN FLTK 1.1.0b13

	- Windows resized by a program would revert to their
	  original size when moved under WIN32.
	- Cygwin can only compile the new WIN32 drag-n-drop code
	  using GCC 3.x.
	- Tooltips now appear for inactive and output widgets.
	- Tooltips no longer steal keyboard events other than
	  ESCape.
	- Tooltips are no longer delayed when moving between
	  adjacent widgets.
	- fl_beep(FL_BEEP_DEFAULT) now uses the PC speaker under
	  Windows (0xFFFFFFFF) rather than an event sound.
	- The configure script didn't include the -mwindows or
	  -DWIN32 compiler options in the output of fltk-config
	  when using the Cygwin tools.
	- Fl_Output didn't take input focus when needed, so it
	  was unable to support CTRL-C for copying text in the
	  field and did not unhighlight selections when the
	  widget lost focus.
	- The fl_filename_name() function didn't handle a NULL
	  input string.
	- The input field used by the fl_input() and
	  fl_password() functions was resized too small in
	  1.1.0b12.
	- Added casts in fl_set_fonts_win32.cxx for VC++ 5.0.
	- Fl_File_Icon::find() did not check the basename of a
	  filename for a match; this caused matches for a
	  specific filename (e.g. "fluid") to fail.
	- The Fl_Shared_Image class now supports additional
	  image handling functions - this allows you to support
	  additional image file formats transparently.


CHANGES IN FLTK 1.1.0b12

	- Documentation updates.
	- Fl_Choice didn't clip the current value properly - it
	  wasn't accounting for the box border width.
	- The forms compatibility functions are now placed in a
	  "fltk_forms" library to match FLTK 2.0.
	- Renamed down() and frame() to fl_down() and
	  fl_frame(), filename_xyz() to fl_filename_xyz(), and
	  all of the define_FL_FOO() functions for the custom
	  boxtypes to fl_define_FL_FOO() to avoid namespace
	  clashes.
	- Stereo OpenGL support (patch from Stuart Levy)
	- All of the convenience functions defined in fl_ask.H