@@ -52,9 +52,13 @@ BUILDING AND INSTALLING FLTK UNDER UNIX AND MacOS X
     You can run configure yourself to get the exact setup you
     need. Type "./configure <options>".  Options include:
 
+	--enable-cygwin         - Enable the Cygwin libraries (WIN32)
 	--enable-debug          - Enable debugging code & symbols
 	--disable-gl            - Disable OpenGL support
 	--enable-shared         - Enable generation of shared libraries
+	--enable-threads        - Enable multithreading support
+	--enable-xdbe           - Enable the X double-buffer extension
+	--enable-xft            - Enable the Xft library (anti-aliased fonts)
 
 	--bindir=/path          - Set the location for executables
                         	  [default = /usr/local/bin]
