@@ -198,11 +198,26 @@ options are:</P>
 
 <DL>
 
+	<DT>--enable-cygwin</DT>
+	<DD>Enable the Cygwin libraries under WIN32</DD>
+
 	<DT>--enable-debug</DT>
 	<DD>Enable debugging code &amp; symbols</DD>
 
+	<DT>--disable-gl</DT>
+	<DD>Disable OpenGL support</DD>
+
 	<DT>--enable-shared</DT>
 	<DD>Enable generation of shared libraries</DD>
+
+	<DT>--enable-threads</DT>
+	<DD>Enable multithreading support</DD>
+
+	<DT>--enable-xdbe</DT>
+	<DD>Enable the X double-buffer extension</DD>
+
+	<DT>--enable-xft</DT>
+	<DD>Enable the Xft library for anti-aliased fonts under X11</DD>
 
 	<DT>--bindir=/path</DT>
 	<DD>Set the location for executables [default = $prefix/bin]</DD>
